--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "bundle/AutoClose"]
 	path = bundle/AutoClose
 	url = https://github.com/vim-scripts/AutoClose.git
+[submodule "bundle/snipmate-snippets"]
+	path = bundle/snipmate-snippets
+	url = https://github.com/honza/snipmate-snippets.git
 [submodule "bundle/Better-CSS-Syntax-for-Vim"]
 	path = bundle/Better-CSS-Syntax-for-Vim
 	url = https://github.com/ChrisYip/Better-CSS-Syntax-for-Vim.git
