Fixed repo link for snipmate

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/vim-scripts/AutoClose.git
 [submodule "bundle/snipmate-snippets"]
 	path = bundle/snipmate-snippets
-	url = https://github.com/honza/snipmate-snippets.git
+	url = https://github.com/honza/vim-snippets.git
 [submodule "bundle/Better-CSS-Syntax-for-Vim"]
 	path = bundle/Better-CSS-Syntax-for-Vim
 	url = https://github.com/ChrisYip/Better-CSS-Syntax-for-Vim.git
